@@ -32,7 +32,7 @@ sub encode($$;$) {
     my ( $obj, $str, $chk ) = @_;
     my $len = length($str);
     pos($str) = 0;
-    my $bytes = '';
+    my $bytes = substr($str, 0, 0); # to propagate taintedness
     while ( pos($str) < $len ) {
         if ( $str =~ /\G($re_asis+)/ogc ) {
 	    my $octets = $1;
@@ -59,9 +59,10 @@ sub encode($$;$) {
 }
 
 sub decode($$;$) {
+    use re 'taint';
     my ( $obj, $bytes, $chk ) = @_;
     my $len = length($bytes);
-    my $str = "";
+    my $str = substr($bytes, 0, 0); # to propagate taintedness;
     pos($bytes) = 0;
     no warnings 'uninitialized';
     while ( pos($bytes) < $len ) {
